# tasktracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Installer/: Installer.cpp  Installer.vcxproj  resource.h
Installer/x64/Debug/: Installer.exe.recipe  Installer.ilk  installer.new.obj.enc  vc143.idb
Installer/x64/Debug/Installer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Installer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Installer/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
TaskTracker/: TaskTracker.cpp  TaskTracker.vcxproj  TaskTracker.vcxproj.filters
TaskTracker/x64/Debug/: TaskTracker.exe.recipe  TaskTracker.ilk  vc143.idb
TaskTracker/x64/Debug/TaskTracker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TaskTracker/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
installer/: installer.cpp  tasktracker.rc
installer/inc/: fileUtils.hpp  installerUtils.hpp  registryUtils.hpp  systemUtils.hpp
installer/src/: fileUtils.cpp  installer.cpp  installerUtils.cpp  registryUtils.cpp  systemUtils.cpp
shared/inc/: filePath.h  fileUtils.hpp  log.hpp  systemUtils.hpp
shared/src/: fileUtils.cpp  log.cpp  systemUtils.cpp
tasktracker/: tasktracker.cpp
tasktracker/inc/: taskTrackerUtils.hpp
tasktracker/src/: taskTrackerUtils.cpp  tasktracker.cpp
